@@ -1,4 +1,4 @@
 DIST build-0.3.5.tar.bz2 65872 RMD160 df3b85caae99f1538d2c9c28eb210ed5b3255bb2 SHA1 7a2fa91cea87b97c80568f5fc076861365ebeb61 SHA256 bd18bafafeb6c861932b3a6e2dd2eb1a9a8f9f3f1972b8de1b776b0a8854a08d
-EBUILD build-0.3.5.ebuild 1527 RMD160 8c04cb1d92080a74b0c230fba78ef3ec5917bdb1 SHA1 05a773ace4d6db05880ab17a5a1a653c3e0b3df9 SHA256 9c61b4467ea86e511dda8d73a331acad60961823b4a8afb5d6d1d9c9455e7b5e
-MISC ChangeLog 286 RMD160 bb9b7b08ec6a6a2117b000092b3c5fc1281c5548 SHA1 b45c0b94a1bb41ac013dd771f966ca7ca0748ac6 SHA256 d690036d49be152238ae3d36a8d50e650293942d62ab544c1be08dcb7c7de95b
+EBUILD build-0.3.5.ebuild 1409 RMD160 24f7e5f2ae0d3656662873492fb1a43c43051185 SHA1 af83ee4385afd4facf1be3a326c561f1d5fa43ad SHA256 660cad5c7a8f93199ba906bce12ecc5539333d043351292d4d99b08e440c9716
+MISC ChangeLog 447 RMD160 79c328b4b64d5a95f9286b3a6d6e457ca6a83ef6 SHA1 f6892359968996d8883f3b5bbd43be71f764a698 SHA256 28a3a1b708731659e7345537c0debd7a6ea3b45de90640bb65342d6e9e4d25d8
 MISC metadata.xml 290 RMD160 477ae5b5f81ab27749d5e68e95bb3cde684ec753 SHA1 6c94a51c1738c49bdf08b92fc7e6583875f65781 SHA256 c1f650400a8fb43cc289484e44c1620b2f8addd8a8069e197efca20347ddcaf7
